Added offcanvas menu

--- a/plps/index.html
+++ b/plps/index.html
@@ -17,96 +17,125 @@
   </head>
   <body data-paxy="customEffect{padding-top,264,200,px,0,64}">
 
-  <header class="header sticky" data-paxy="customEffect{top,0,-64,px,0,64}" role="navigation">
-    <div class="primary-nav">
-      <div class="wrapper">
-        <div class="logos">
-          <a role="link" class="first" href="#"><img src="img/media/Huggies_logo.png" alt="Huggies" /></a>
-          <a role="link" href="#"><img src="img/media/PullUps_logo.png" alt="PullUps" /></a>
-          <a role="link" class="logo" href="#" data-paxy="customEffect{margin-top,15,28,px,0,64}"><img src="img/media/GoodNights_logo.png" alt="GoodNights" data-paxy="customEffect{height,46,38,px,0,64}" /></a>
+  <header>
+    <div class="header show-for-medium-up" data-paxy="customEffect{top,0,-64,px,0,64}">
+      <div class="primary-nav">
+        <div class="wrapper">
+          <div class="logos">
+            <a class="first" href="#"><img src="img/media/Huggies_logo.png" alt="Huggies" /></a>
+            <a href="#"><img src="img/media/PullUps_logo.png" alt="PullUps" /></a>
+            <a class="logo" href="#" data-paxy="customEffect{margin-top,15,28,px,0,64}"><img src="img/media/GoodNights_logo.png" alt="GoodNights" data-paxy="customEffect{height,46,38,px,0,64}" /></a>
+          </div>
+
+          <ul role="toolbar" class="utility-nav">
+            <li class="language">
+              <a href="#">USA - English</a>
+              <ul class="select-language" style="display: none">
+                <li><a href="#">USA - English</a></li>
+                <li><a href="#">USA - Español</a></li>
+                <li><a href="#">Canada - English</a></li>
+                <li><a href="#">Canada - Français</a></li>
+                <li><a href="#">See All Countries</a></li>
+              </ul>
+            </li>
+            <li><a href="#" class="active">Contact Us</a></li>
+            <li><a href="#">Buy Now</a></li>
+          </ul>
+
+          <ul role="toolbar" class="main-nav">
+            <li><a href="#">Bedwetting Products</a></li>
+            <li><a href="#">Managing Bedwetting</a></li>
+            <li><a href="#">Coupons</a></li>
+            <li id="search"><img src="img/search_icon.png" /></li>
+          </ul>
         </div>
-
-        <ul role="toolbar" class="utility-nav">
-          <li class="language">
-            <a href="#">USA - English</a>
-            <ul class="select-language" style="display: none">
-              <li><a href="#">USA - English</a></li>
-              <li><a href="#">USA - Español</a></li>
-              <li><a href="#">Canada - English</a></li>
-              <li><a href="#">Canada - Français</a></li>
-              <li><a href="#">See All Countries</a></li>
-            </ul>
-          </li>
-          <li><a href="#" class="active">Contact Us</a></li>
-          <li><a href="#">Buy Now</a></li>
-        </ul>
-
-        <ul role="toolbar" class="main-nav">
-          <li><a href="#">Bedwetting Products</a></li>
-          <li><a href="#">Managing Bedwetting</a></li>
-          <li><a href="#">Coupons</a></li>
-          <li id="search"><img src="img/search_icon.png" /></li>
-        </ul>
       </div>
-    </div>
-    <div class="sub-nav">
+      <div class="sub-nav">
+        <div class="wrapper">
+          <a href="#">SIGN IN OR JOIN GOODNITES</a>
+          <p>HI STEPHANIE! <img src="img/cup.jpg" /> YOU HAVE <span class="points">5.345</span> POINTS!</p>
+        </div>
+      </div>
+
       <div class="wrapper">
-        <a href="#">SIGN IN OR JOIN GOODNITES</a>
-        <p>HI STEPHANIE! <img src="img/cup.jpg" /> YOU HAVE <span class="points">5.345</span> POINTS!</p>
+        <div class="search-form">
+          <img src="img/search_icon.png" />
+          <form action="#" method="post">              
+              <input name="Search" placeholder="How can we help?" type="search">
+              <a href="#" type="submit">SEARCH</a>
+          </form>
+          <a href="#" class="close-search"><div class="sprite-close"></div></a>
+        </div>
       </div>
-    </div>
 
-    <div class="wrapper">
-      <div class="search-form">
-        <img src="img/search_icon.png" />
-        <form action="#" method="post">              
-            <input name="Search" placeholder="How can we help?" type="search">
-            <a href="#" type="submit">SEARCH</a>
-        </form>
-        <a href="#" class="close-search"><div class="sprite-close"></div></a>
+      <div class="sticky-nav">
+        <div class="wrapper">
+          <h2>Girls GoodNites Bedtime Pants</h2>
+          <a href="#" class="button round buy">BUY NOW</a>
+        </div>
       </div>
-    </div>
-
-    <div class="sticky-nav">
-      <div class="wrapper">
-        <h2>Girls GoodNites Bedtime Pants</h2>
-        <a href="#" class="button round buy">BUY NOW</a>
+      <div class="sticky-nav-links">
+        <div class="wrapper">
+          <ul class="text-center">
+            <li><a href="" class="padding-lg">IMAGES</a></li>
+            <li><a href="" class="padding-lg">FEATURES</a></li>
+            <li><a href="" class="active padding-lg">SIZING</a></li>
+            <li><a href="" class="padding-lg">SAVE NOW</a></li>
+            <li><a href="" class="padding-lg">EARN POINTS</a></li>
+            <li><a href="" class="padding-lg">REVIEWS</a></li>
+          </ul>
+        </div>
+        <div class="clearfix">
       </div>
-    </div>
-    <div class="sticky-nav-links">
-      <div class="wrapper">
-        <ul class="text-center">
-          <li><a href="" class="padding-lg">IMAGES</a></li>
-          <li><a href="" class="padding-lg">FEATURES</a></li>
-          <li><a href="" class="active padding-lg">SIZING</a></li>
-          <li><a href="" class="padding-lg">SAVE NOW</a></li>
-          <li><a href="" class="padding-lg">EARN POINTS</a></li>
-          <li><a href="" class="padding-lg">REVIEWS</a></li>
-        </ul>
-      </div>
-      <div class="clearfix">
     </div>
   </header>
 
   <div class="clearfix"></div>
-  
-<div class="content">
-  <div class="row">
-    <div class="columns small-12">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed erat eget diam luctus laoreet. Aenean auctor felis tellus. Quisque dictum libero vel dui bibendum ultricies. Sed varius dui sodales ante laoreet, in eleifend turpis maximus. Maecenas ut est pulvinar, volutpat nisl ut, commodo lectus. Cras sit amet ipsum eu dui luctus aliquet ut in sapien. In a pretium ligula, eget accumsan risus. Phasellus porttitor quis libero eget vulputate. Sed placerat elementum sollicitudin. In semper sem eget lacus imperdiet rhoncus. Integer finibus ex vel tristique vestibulum. Proin pharetra sollicitudin imperdiet. Morbi vel dui elementum est gravida euismod. Phasellus posuere odio in ante laoreet, id sodales felis pellentesque.</p>
+  <div class="off-canvas-wrap" data-offcanvas>
+    <div class="inner-wrap">
+        <div class="hybrid-bar hide-for-medium-up">
+            <nav class="tab-bar">
+                <div class="title-area">
+                  <a class="logo" href="#"><img src="img/media/GoodNights_logo.png" alt="GoodNights" /></a>
+                </div>
+                <section class="left-small show-for-small">
+                    <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
+                </section>
+            </nav>
+            <aside class="left-off-canvas-menu">
+                <ul class="off-canvas-list">
+                    <li class="show-for-small">
+                        <label>Foundation</label>
+                    </li>
+                    <li><a href="#">Link 1</a>
+                    </li>
+                    <li><a href="#">Link 2</a>
+                    </li>
+                    <li><a href="#">Link 3</a>
+                    </li>
+                    <li><a href="#">Link 4</a>
+                    </li>
+                    <li><a href="#">Link 5</a>
+                    </li>
+                </ul>
+            </aside>
+        </div>
+        <div class="row content">
+          <div class="columns small-12">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed erat eget diam luctus laoreet. Aenean auctor felis tellus. Quisque dictum libero vel dui bibendum ultricies. Sed varius dui sodales ante laoreet, in eleifend turpis maximus. Maecenas ut est pulvinar, volutpat nisl ut, commodo lectus. Cras sit amet ipsum eu dui luctus aliquet ut in sapien. In a pretium ligula, eget accumsan risus. Phasellus porttitor quis libero eget vulputate. Sed placerat elementum sollicitudin. In semper sem eget lacus imperdiet rhoncus. Integer finibus ex vel tristique vestibulum. Proin pharetra sollicitudin imperdiet. Morbi vel dui elementum est gravida euismod. Phasellus posuere odio in ante laoreet, id sodales felis pellentesque.</p>
 
-      <p>Proin non consectetur ex. Quisque augue ligula, ullamcorper sit amet hendrerit in, blandit quis augue. Integer ut feugiat purus, eu aliquet nulla. Donec fringilla dapibus ornare. Donec ac lobortis tortor, vel molestie leo. Quisque maximus est eu tincidunt eleifend. Nulla vestibulum ut metus vel blandit.</p>
+            <p>Proin non consectetur ex. Quisque augue ligula, ullamcorper sit amet hendrerit in, blandit quis augue. Integer ut feugiat purus, eu aliquet nulla. Donec fringilla dapibus ornare. Donec ac lobortis tortor, vel molestie leo. Quisque maximus est eu tincidunt eleifend. Nulla vestibulum ut metus vel blandit.</p>
 
-      <p>Mauris finibus magna eget justo interdum aliquam. In at dolor urna. Nullam sed sapien hendrerit mauris cursus lacinia. In maximus nibh orci, vel hendrerit nisl lobortis ac. Aliquam erat volutpat. Proin non justo sit amet risus fermentum aliquam vel hendrerit arcu. Praesent in efficitur sem. Maecenas sed arcu metus. Cras vitae blandit orci, id auctor lacus. Nunc sit amet lorem non tellus pretium feugiat. Maecenas pulvinar est massa, sed fringilla massa tempor maximus. Nunc tortor elit, mollis sit amet augue non, consequat tempor risus.</p>
+            <p>Mauris finibus magna eget justo interdum aliquam. In at dolor urna. Nullam sed sapien hendrerit mauris cursus lacinia. In maximus nibh orci, vel hendrerit nisl lobortis ac. Aliquam erat volutpat. Proin non justo sit amet risus fermentum aliquam vel hendrerit arcu. Praesent in efficitur sem. Maecenas sed arcu metus. Cras vitae blandit orci, id auctor lacus. Nunc sit amet lorem non tellus pretium feugiat. Maecenas pulvinar est massa, sed fringilla massa tempor maximus. Nunc tortor elit, mollis sit amet augue non, consequat tempor risus.</p>
 
-      <p>Maecenas leo ante, finibus ac laoreet in, cursus suscipit quam. Nunc id finibus arcu. Praesent efficitur sapien tellus. Phasellus volutpat tellus purus, vel viverra eros sagittis ac. Ut pulvinar rhoncus placerat. Maecenas pharetra odio magna, eu vulputate velit finibus quis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed lobortis dolor quis condimentum viverra. Sed molestie ullamcorper tristique. Aliquam aliquet convallis tincidunt. Ut id felis sed sapien aliquet egestas. Cras consectetur consequat diam, luctus condimentum arcu suscipit ac. Cras erat elit, commodo quis magna ac, ultricies dictum mi. Sed porta gravida quam, pretium porttitor massa eleifend et.</p>
+            <p>Maecenas leo ante, finibus ac laoreet in, cursus suscipit quam. Nunc id finibus arcu. Praesent efficitur sapien tellus. Phasellus volutpat tellus purus, vel viverra eros sagittis ac. Ut pulvinar rhoncus placerat. Maecenas pharetra odio magna, eu vulputate velit finibus quis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed lobortis dolor quis condimentum viverra. Sed molestie ullamcorper tristique. Aliquam aliquet convallis tincidunt. Ut id felis sed sapien aliquet egestas. Cras consectetur consequat diam, luctus condimentum arcu suscipit ac. Cras erat elit, commodo quis magna ac, ultricies dictum mi. Sed porta gravida quam, pretium porttitor massa eleifend et.</p>
 
-      <p>Nulla elementum metus lorem, ultricies pellentesque libero efficitur quis. Duis vel pretium leo. Donec velit elit, sagittis in luctus id, bibendum non lorem. Mauris mattis, nulla id dictum fermentum, ipsum erat finibus augue, sit amet tincidunt ligula mi porta leo. Cras suscipit diam ante, quis mollis tortor accumsan nec. Fusce vel lacinia nibh. Ut erat nisl, faucibus mattis cursus eget, bibendum sit amet lectus. Nulla placerat, enim eu iaculis sagittis, mauris augue lobortis metus, viverra scelerisque augue lacus ac odio.</p>
+            <p>Nulla elementum metus lorem, ultricies pellentesque libero efficitur quis. Duis vel pretium leo. Donec velit elit, sagittis in luctus id, bibendum non lorem. Mauris mattis, nulla id dictum fermentum, ipsum erat finibus augue, sit amet tincidunt ligula mi porta leo. Cras suscipit diam ante, quis mollis tortor accumsan nec. Fusce vel lacinia nibh. Ut erat nisl, faucibus mattis cursus eget, bibendum sit amet lectus. Nulla placerat, enim eu iaculis sagittis, mauris augue lobortis metus, viverra scelerisque augue lacus ac odio.</p>
+          </div>
+        </div>
+        <a class="exit-off-canvas"></a>
     </div>
   </div>
-</div>
-
-
   <footer>
     <div class="footer-links">
       <div class="row footer-links-header show-for-medium-up">
@@ -205,11 +234,13 @@
 
     <!-- Global Scripts -->
     <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/jquery.masonry.min.js"></script>
     <script src="js/vendor/fastclick.js"></script>
     <script src="js/foundation.min.js"></script>
     <!-- Custom Scripts -->
     <script src="js/paxy.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
     <script src="js/main.js"></script>
   </body>
 </html>
