--- a/plps/index.html
+++ b/plps/index.html
@@ -179,8 +179,8 @@
               Kimberly-Clark Baby and Childcare Brands
             </p>
             <div class="pull-right text-right">
-              <a href="#"><img src="img/media/huggies_logo_footer.png" alt="Huggies"></a>
-              <a href="#"><img src="img/media/pullups_logo_footer.png" alt="Pull Ups"></a>
+              <a href="#"><div class="sprite-huggies_logo_footer"></div></a>
+              <a href="#"><div class="sprite-pullups_logo_footer"></div></a>
             </div>
           </div>
         </div>
@@ -191,6 +191,7 @@
               <a href="#"><img src="img/media/marvel_logo.png" alt="Marvel"></a>
               <a href="#"><img src="img/media/fairies_logo.png" alt="Fairies"></a>
               <p>2015 KCWW. All Rights Reserved.</p>
+              <a href="#"><div class="sprite-adchoices"></div></a>
           </div>
           <div class="columns medium-9">
             <p>††GoodNites® Bed Mats are a Product of the Year Winner! Children's Products Category. Survey of 50,138 people by TNS in the U.S.</p>
