added hover effects

--- a/plps/index.html
+++ b/plps/index.html
@@ -22,9 +22,9 @@
       <div class="primary-nav">
         <div class="wrapper">
           <div class="logos">
-            <a class="first" href="#"><img src="img/media/Huggies_logo.png" alt="Huggies" /></a>
-            <a href="#"><img src="img/media/PullUps_logo.png" alt="PullUps" /></a>
-            <a class="logo" href="#" data-paxy="customEffect{margin-top,15,28,px,0,64}"><img src="img/media/GoodNights_logo.png" alt="GoodNights" data-paxy="customEffect{height,46,38,px,0,64}" /></a>
+            <a class="first" href="#"><div class="sprite-huggies_logo_header"></div></a>
+            <a href="#"><div class="sprite-pullUps_logo_header"></div></a>
+            <a class="logo" href="#" data-paxy="customEffect{margin-top,10,28,px,0,64}"><img src="img/media/GoodNights_logo.png" alt="GoodNights" data-paxy="customEffect{height,46,38,px,0,64}" /></a>
           </div>
 
           <ul role="toolbar" class="utility-nav">
