started mobile header

--- a/plps/index.html
+++ b/plps/index.html
@@ -30,7 +30,7 @@
           <ul role="toolbar" class="utility-nav">
             <li class="language">
               <a href="#">USA - English</a>
-              <ul class="select-language" style="display: none">
+              <ul class="select-language">
                 <li><a href="#">USA - English</a></li>
                 <li><a href="#">USA - Español</a></li>
                 <li><a href="#">Canada - English</a></li>
@@ -103,7 +103,7 @@
                 </section>
             </nav>
             <aside class="left-off-canvas-menu">
-                <ul class="off-canvas-list">
+<!--                 <ul class="off-canvas-list">
                     <li class="show-for-small">
                         <label>Foundation</label>
                     </li>
@@ -117,6 +117,41 @@
                     </li>
                     <li><a href="#">Link 5</a>
                     </li>
+                </ul> -->
+                <div class="welcome-message">
+                  SIGN UP OR JOIN
+                </div>
+                <ul class="accordion" data-accordion>
+                  <li class="accordion-navigation">
+                    <a href="#panel1a">Bedwetting Products</a>
+                    <div id="panel1a" class="content">
+                      <ul>
+                        <li><a href="">Bedwetting Products for Boys</a></li>
+                        <li><a href="">Bedwetting Products for Girls</a></li>
+                        <li><a href="">All Bedwetting Products</a></li>
+                      </ul>
+                    </div>
+                  </li>
+                  <li class="accordion-navigation">
+                    <a href="#panel2a">Managing Bedwetting</a>
+                    <div id="panel2a" class="content">
+                      <ul>
+                        <li><a href="">Bedwetting Products for Boys</a></li>
+                        <li><a href="">Bedwetting Products for Girls</a></li>
+                        <li><a href="">All Bedwetting Products</a></li>
+                      </ul>
+                    </div>
+                  </li>
+                  <li class="accordion-navigation">
+                    <a href="#panel3a">Coupons</a>
+                    <div id="panel3a" class="content">
+                      <ul>
+                        <li><a href="">Bedwetting Products for Boys</a></li>
+                        <li><a href="">Bedwetting Products for Girls</a></li>
+                        <li><a href="">All Bedwetting Products</a></li>
+                      </ul>
+                    </div>
+                  </li>
                 </ul>
             </aside>
         </div>
@@ -149,10 +184,7 @@
             Contact US
           </div>
         </div>
-        <div class="columns medium-3">
-          
-        </div>
-        <div class="columns medium-3">
+        <div class="columns medium-offset-3 medium-3">
           <div class="footer-heading pull-right">
             1-877-648-2484
           </div>
