mobile header styling

--- a/plps/index.html
+++ b/plps/index.html
@@ -103,21 +103,6 @@
                 </section>
             </nav>
             <aside class="left-off-canvas-menu">
-<!--                 <ul class="off-canvas-list">
-                    <li class="show-for-small">
-                        <label>Foundation</label>
-                    </li>
-                    <li><a href="#">Link 1</a>
-                    </li>
-                    <li><a href="#">Link 2</a>
-                    </li>
-                    <li><a href="#">Link 3</a>
-                    </li>
-                    <li><a href="#">Link 4</a>
-                    </li>
-                    <li><a href="#">Link 5</a>
-                    </li>
-                </ul> -->
                 <div class="welcome-message">
                   SIGN UP OR JOIN
                 </div>
@@ -153,6 +138,56 @@
                     </div>
                   </li>
                 </ul>
+                <ul class="large-menu">
+                  <li><a href="">Buy Now</a></li>
+                </ul>
+                <a href="#" class="button round" data-dropdown="drop">USA - ENGLISH &raquo;</a>
+                <ul id="drop" class="f-dropdown" data-dropdown-content>
+                  <li><a href="#">USA - English</a></li>
+                  <li><a href="#">USA - Español</a></li>
+                  <li><a href="#">Canada - English</a></li>
+                  <li><a href="#">Canada - Français</a></li>
+                  <li><a href="#">See All Countries</a></li>
+                </ul>
+                <a href="">KIMBERLY-CLARK BABY AND CHILDCARE BRANDS</a>
+                <a href="#"><img src="img/media/huggies_logo.png" alt="Huggies" /></a>
+                <a href="#"><img src="img/media/pullups_logo.png" alt="Pull Ups" /></a>
+                <ul class="medium-menu">
+                  <li><a href="">Common Questions</a></li>
+                  <li><a href="">Contact Us</a></li>
+                  <li><a href="">1-877-648-2484</a></li>
+                </ul>
+                <ul class="social inline">
+                  <li><a href="#"><div class="sprite-facebook"></div></a></li>
+                  <li><a href="#"><div class="sprite-pinterest"></div></a></li>
+                  <li><a href="#"><div class="sprite-twitter"></div></a></li>
+                  <li><a href="#"><div class="sprite-google"></div></a></li>
+                  <li><a href="#"><div class="sprite-instagram"></div></a></li>
+                  <li><a href="#"><div class="sprite-youtube"></div></a></li>
+                </ul>
+                <ul class="medium-menu">
+                  <li><a href="">Kimberly-Clark Brands</a></li>
+                  <li><a href="">Careers</a></li>
+                  <li><a href="">Press</a></li>
+                </ul>
+                <a href="#" class="button round">HEALTHCARE PROFESSIONALS</a>
+                <ul class="small-menu">
+                  <li><a href="">PRIVACY POLICY</a></li>
+                  <li><a href="">LEGAL STATEMENT</a></li>
+                  <li><a href="">TERMS & CONDITIONS</a></li>
+                </ul>
+                <div class="copyright">
+                    <a href="#"><img src="img/media/marvel_logo.png" alt="Marvel"></a>
+                    <a href="#"><img src="img/media/fairies_logo.png" alt="Fairies"></a>
+                    <p>2015 KCWW. All Rights Reserved.</p>
+                    <a href="#"><div class="sprite-adchoices"></div></a>
+                </div>
+                <div class="">
+                  <p>††GoodNites® Bed Mats are a Product of the Year Winner! Children's Products Category. Survey of 50,138 people by TNS in the U.S.</p>
+                  <p>†Bedwetting management</p>
+                  <p>‡vs. the leading brand size 4T/5T training pants</p>
+                  <p>‡‡National Kidney Foundation Pediatrician and GoodNites NiteLite Panelist, Dr. Wolffe Nadoolman</p>
+                </div>
             </aside>
         </div>
         <div class="row content">
