--- a/plps/index.html
+++ b/plps/index.html
@@ -95,8 +95,8 @@
     <div class="inner-wrap">
         <div class="hybrid-bar hide-for-medium-up">
             <nav class="tab-bar">
-                <div class="title-area">
-                  <a class="logo" href="#"><img src="img/media/GoodNights_logo.png" alt="GoodNights" /></a>
+                <div class="title-area text-center">
+                  <a class="logo" href="#"><img src="img/media/GoodNights_logo_mobile.png" alt="GoodNights" /></a>
                 </div>
                 <section class="left-small show-for-small">
                     <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
@@ -141,7 +141,7 @@
                 <ul class="large-menu">
                   <li><a href="">Buy Now</a></li>
                 </ul>
-                <a href="#" class="button round" data-dropdown="drop">USA - ENGLISH &raquo;</a>
+                <a href="#" class="button round empty" data-dropdown="drop">USA - ENGLISH &raquo;</a>
                 <ul id="drop" class="f-dropdown" data-dropdown-content>
                   <li><a href="#">USA - English</a></li>
                   <li><a href="#">USA - Español</a></li>
@@ -149,44 +149,50 @@
                   <li><a href="#">Canada - Français</a></li>
                   <li><a href="#">See All Countries</a></li>
                 </ul>
-                <a href="">KIMBERLY-CLARK BABY AND CHILDCARE BRANDS</a>
-                <a href="#"><img src="img/media/huggies_logo.png" alt="Huggies" /></a>
-                <a href="#"><img src="img/media/pullups_logo.png" alt="Pull Ups" /></a>
+                <div class="text-center">
+                  <a href="">KIMBERLY-CLARK BABY AND CHILDCARE BRANDS</a>
+                  <a class="space-v" href="#"><img src="img/media/huggies_logo.png" alt="Huggies" /></a>
+                  <a class="space-v" href="#"><img src="img/media/pullups_logo.png" alt="Pull Ups" /></a>
+                </div>
                 <ul class="medium-menu">
                   <li><a href="">Common Questions</a></li>
                   <li><a href="">Contact Us</a></li>
                   <li><a href="">1-877-648-2484</a></li>
                 </ul>
                 <ul class="social inline">
-                  <li><a href="#"><div class="sprite-facebook"></div></a></li>
-                  <li><a href="#"><div class="sprite-pinterest"></div></a></li>
-                  <li><a href="#"><div class="sprite-twitter"></div></a></li>
-                  <li><a href="#"><div class="sprite-google"></div></a></li>
-                  <li><a href="#"><div class="sprite-instagram"></div></a></li>
-                  <li><a href="#"><div class="sprite-youtube"></div></a></li>
+                  <li><a href="#"><div class="sprite-facebook-xl"></div></a></li>
+                  <li><a href="#"><div class="sprite-pinterest-xl"></div></a></li>
+                  <li><a href="#"><div class="sprite-twitter-xl"></div></a></li>
+                  <li><a href="#"><div class="sprite-google-xl"></div></a></li>
+                </ul>
+                <ul class="social last inline">
+                  <li><a href="#"><div class="sprite-instagram-xl"></div></a></li>
+                  <li><a href="#"><div class="sprite-youtube-xl"></div></a></li>
                 </ul>
                 <ul class="medium-menu">
                   <li><a href="">Kimberly-Clark Brands</a></li>
                   <li><a href="">Careers</a></li>
                   <li><a href="">Press</a></li>
                 </ul>
-                <a href="#" class="button round">HEALTHCARE PROFESSIONALS</a>
+                <a href="#" class="button empty text-center round">HEALTHCARE PROFESSIONALS</a>
                 <ul class="small-menu">
                   <li><a href="">PRIVACY POLICY</a></li>
                   <li><a href="">LEGAL STATEMENT</a></li>
                   <li><a href="">TERMS & CONDITIONS</a></li>
                 </ul>
-                <div class="copyright">
-                    <a href="#"><img src="img/media/marvel_logo.png" alt="Marvel"></a>
-                    <a href="#"><img src="img/media/fairies_logo.png" alt="Fairies"></a>
-                    <p>2015 KCWW. All Rights Reserved.</p>
-                    <a href="#"><div class="sprite-adchoices"></div></a>
-                </div>
-                <div class="">
-                  <p>††GoodNites® Bed Mats are a Product of the Year Winner! Children's Products Category. Survey of 50,138 people by TNS in the U.S.</p>
-                  <p>†Bedwetting management</p>
-                  <p>‡vs. the leading brand size 4T/5T training pants</p>
-                  <p>‡‡National Kidney Foundation Pediatrician and GoodNites NiteLite Panelist, Dr. Wolffe Nadoolman</p>
+                <div class="row">
+                  <div class="small-12 columns">
+                    <div class="copyright">
+                        <a href="#"><img src="img/media/marvel_logo_xl.png" alt="Marvel"></a>
+                        <a href="#"><img src="img/media/fairies_logo_xl.png" alt="Fairies"></a>
+                        <p>2015 KCWW. All Rights Reserved.</p>
+                        <a href="#"><div class="sprite-adchoices-mobile"></div></a>
+                    </div>
+                    <p>††GoodNites® Bed Mats are a Product of the Year Winner! Children's Products Category. Survey of 50,138 people by TNS in the U.S.</p>
+                    <p>†Bedwetting management</p>
+                    <p>‡vs. the leading brand size 4T/5T training pants</p>
+                    <p>‡‡National Kidney Foundation Pediatrician and GoodNites NiteLite Panelist, Dr. Wolffe Nadoolman</p>
+                  </div>
                 </div>
             </aside>
         </div>
